@@ -9,7 +9,8 @@
 <h1>socklog - small and secure replacement for <i>syslogd</i></h1>
 <hr>
 <a href="install.html">How to install socklog</a><br>
-<a href="upgrade.html">Upgrading from previous versions of socklog</a>
+<a href="upgrade.html">Upgrading from previous versions of socklog</a><br>
+<a href="usedietlibc.html">How to use dietlibc</a>
 <p>
 <a href="benefits.html">Benefits</a><br>
 <a href="configuration.html">Configuration</a><br>
