@@ -2,6 +2,7 @@ socklog-0.8.2
 Sat, 18 May 2002 15:08:09 +0200
   * src/: include public domain sources to build byte.a, unix.a, time.a:
     socklog builds without having daemontools' sources installed.
+  * doc/usedietlibc.html: how to use dietlibc.
 
 socklog-0.8.1
 Sun, 28 Apr 2002 10:32:28 +0200
